objects/ASI_GnH_Route_Type__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GnH_Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_External_Party_Type__c</fullName>
        <label>External Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Official &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_GnH_Type__c</fullName>
        <label>G&amp;H Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Receive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_GnH_Route_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI GnH Route Type</label>
    <listViews>
        <fullName>ASI_GnH_KR_All_GnH_Offer_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_External_Party_Type__c</columns>
        <columns>ASI_GnH_Company__c</columns>
        <columns>ASI_GnH_Department__c</columns>
        <columns>ASI_GnH_User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Route_Type__c.ASI_GnH_KR_Route_Type</value>
        </filters>
        <filters>
            <field>ASI_GnH_Type__c</field>
            <operation>equals</operation>
            <value>Offer</value>
        </filters>
        <label>All KR G&amp;H Offer Route Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_KR_Power_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_KR_All_GnH_Receive_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_External_Party_Type__c</columns>
        <columns>ASI_GnH_Company__c</columns>
        <columns>ASI_GnH_Department__c</columns>
        <columns>ASI_GnH_User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Route_Type__c.ASI_GnH_KR_Route_Type</value>
        </filters>
        <filters>
            <field>ASI_GnH_Type__c</field>
            <operation>equals</operation>
            <value>Receive</value>
        </filters>
        <label>All KR G&amp;H Receive Route Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_KR_Power_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_KR_All_GnH_Route_Types</fullName>
        <columns>ASI_GnH_Department__c</columns>
        <columns>NAME</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_GnH_Type__c</columns>
        <columns>ASI_GnH_External_Party_Type__c</columns>
        <columns>ASI_GnH_Company__c</columns>
        <columns>ASI_GnH_User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Route_Type__c.ASI_GnH_KR_Route_Type</value>
        </filters>
        <label>All KR G&amp;H Route Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_KR_Power_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_TW_All_GnH_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Company__c</columns>
        <columns>ASI_GnH_Department__c</columns>
        <columns>ASI_GnH_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Route_Type__c.ASI_GnH_TW_Route_Type</value>
        </filters>
        <label>All TW G&amp;H Route Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_Compliance_Officer</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GnH-RT-{0000}</displayFormat>
        <label>ASI GnH Route Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI GnH Route Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_Route_Type</fullName>
        <active>true</active>
        <label>ASI GnH KR Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_TW_Route_Type</fullName>
        <active>true</active>
        <label>ASI GnH TW Route Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>